--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -57,6 +57,18 @@ b.hp.damaging {
   animation-delay: 0.25s;
   animation-duration: 0.75s;
   animation-fill-mode: forwards;
+}
+
+.pokedex {
+  position: fixed;
+  bottom: -400px;
+  right: 10%;
+  transition: transform 0.5s ease-in-out;
+  transform: translateY(0);
+}
+
+.pokedex.speaking {
+  transform: translateY(calc(-400px - 20%));
 }
 
 @keyframes hpDamage {
